src/components/messages/PeerAndMessage/PeerAndMessage.scss
.PeerAndMessage {
  display: flex;
  gap: 0.5em;
  align-items: center;
  width: 15em;
  width: 100%;
  flex-grow: 1;

  &__text,
  &__peer {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    max-width: 15em;
  }

  &__text {
    @media screen and (max-width: 700px) {
      max-width: none;
    }
  }

  &__peer__mobile {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }
  &__peer {
    color: var(--fg-color-1);
    font-weight: 700;
  }

  &__message__details {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  &__message {
    font-size: 0.9em;
    color: var(--fg-color-2);
    width: 75%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    &__timestamp {
      padding-top: 2px;
      color: var(--fg-color-3);
      font-weight: 500;
      font-size: 0.75em;
      line-height: 0.875em;
    }
  }
}

